# mathematicsStudies

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/: test_benchmark.cpp
include/: types.h
math/Vector/: vec.h  vec2.h  vec2Ops.h  vec3.h  vec3Ops.h  vec4.h  vec4Ops.h  vecGeneric.h  vecGenericOps.h  vecTypeAliases.h  vector.h  vectorDef.h
src/: main.cpp
